re PR bootstrap/86739 (Bootstrap broken with host GCC 4.1.2)

PR bootstrap/86739
	* hash-map.h (hash_map::iterator::reference_pair): New class.
	(hash_map::iterator::operator*): Return it rather than std::pair.

From-SVN: r266152